# restless-gambler

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_ADAPTERS.md  INTEGRATION_BOUNDARIES.md  LIVE_TRADING.md  PERSISTENCE.md  SESSION_HANDOFF.md
examples/markets/: kalshi_markets.json
src/restless_gambler/: __init__.py  cli.py  config.py  dashboard.py  domain.py  env.py  execution.py  forecast.py  kalshi.py  market_data.py  mlb_stats.py  namespace.py  paths.py  persistence.py  research.py  risk.py  runner.py  settlement.py  sports_odds.py
tests/: test_backtest.py  test_cli.py  test_execution.py  test_kalshi.py  test_namespace.py  test_persistence.py  test_research.py  test_risk.py  test_runner.py  test_settlement.py  test_sports_odds.py
